@startuml

title __PRACTICAMONA's Class Diagram__\n

  namespace PracticaMona {
    class PracticaMona.Boxertocat {
        + Boxertocat()
        + actividad()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.Dinotocat {
        + Dinotocat()
        + actividad()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.Goretocat {
        + Goretocat()
        + actividad()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.Luchadortocat {
        + Luchadortocat()
        + actividad()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.Octocat {
        - accesorio : String
        - nombre : String
        - vestimenta : String
        + Octocat()
        + getAccesorio()
        + getNombre()
        + getVestimenta()
        + setAccesorios()
        + setNombre()
        + setVestimenta()
        + showMessage()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.Sentrytocat {
        + Sentrytocat()
        + actividad()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.Surftocat {
        + Surftocat()
        + actividad()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.TestOctocat {
        {static} + main()
        {static} + show()
    }
  }
  

  PracticaMona.Boxertocat -up-|> PracticaMona.Octocat
  PracticaMona.Dinotocat -up-|> PracticaMona.Octocat
  PracticaMona.Goretocat -up-|> PracticaMona.Octocat
  PracticaMona.Luchadortocat -up-|> PracticaMona.Octocat
  PracticaMona.Sentrytocat -up-|> PracticaMona.Octocat
  PracticaMona.Surftocat -up-|> PracticaMona.Octocat


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
